--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+mat-toolbar {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
+  mat-card {
+    border-radius: 10px;
+  }
+  p {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+  h3 {
+    margin-top: 20px;
+    color: #333;
+  }
+  
